Working with places based on Realm (adding, editing, deleting)

--- a/FavPlaces/Base.lproj/Main.storyboard
+++ b/FavPlaces/Base.lproj/Main.storyboard
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Title-->
+        <!--Favorite places-->
         <scene sceneID="AeV-Af-xcl">
             <objects>
                 <tableViewController id="TRD-5u-eJ0" customClass="MainViewController" customModule="FavPlaces" customModuleProvider="target" sceneMemberID="viewController">
@@ -25,7 +25,6 @@
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rjq-9m-edJ">
                                             <rect key="frame" x="15" y="10" width="65" height="65"/>
-                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="65" id="840-qz-6vn"/>
                                                 <constraint firstAttribute="height" constant="65" id="mP4-xX-Bo7"/>
@@ -78,7 +77,7 @@
                             <outlet property="delegate" destination="TRD-5u-eJ0" id="Frm-eZ-xn3"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Title" id="1nD-mc-gMm">
+                    <navigationItem key="navigationItem" title="Favorite places" id="1nD-mc-gMm">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="iUB-7e-ZT2">
                             <connections>
                                 <segue destination="w4N-PM-QBd" kind="presentation" identifier="addPlace" id="Gk7-Jw-vt9"/>
@@ -90,7 +89,7 @@
             </objects>
             <point key="canvasLocation" x="249" y="66"/>
         </scene>
-        <!--Title-->
+        <!--Add place-->
         <scene sceneID="3Gz-eS-88M">
             <objects>
                 <tableViewController id="8rP-HS-1W9" customClass="PlaceViewController" customModule="FavPlaces" customModuleProvider="target" sceneMemberID="viewController">
@@ -100,10 +99,10 @@
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <sections>
-                            <tableViewSection headerTitle="Image" id="xkD-Nt-IN3">
+                            <tableViewSection id="xkD-Nt-IN3">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="320" id="1gU-sr-Poc">
-                                        <rect key="frame" x="0.0" y="55.5" width="414" height="320"/>
+                                        <rect key="frame" x="0.0" y="18" width="414" height="320"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1gU-sr-Poc" id="Dss-V9-cWF">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="320"/>
@@ -127,7 +126,7 @@
                             <tableViewSection headerTitle="Name" id="ald-Ye-47p">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="45" id="4Nc-bh-mpN">
-                                        <rect key="frame" x="0.0" y="431.5" width="414" height="45"/>
+                                        <rect key="frame" x="0.0" y="394" width="414" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4Nc-bh-mpN" id="RQF-X1-M4C">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="45"/>
@@ -155,7 +154,7 @@
                             <tableViewSection headerTitle="Location" id="1Sq-zf-hes">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="45" id="oGt-Iu-Ceq">
-                                        <rect key="frame" x="0.0" y="532.5" width="414" height="45"/>
+                                        <rect key="frame" x="0.0" y="495" width="414" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oGt-Iu-Ceq" id="KYz-4L-gip">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="45"/>
@@ -183,7 +182,7 @@
                             <tableViewSection headerTitle="Type" id="cHp-TB-0jS">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="45" id="g5c-jW-A6S">
-                                        <rect key="frame" x="0.0" y="633.5" width="414" height="45"/>
+                                        <rect key="frame" x="0.0" y="596" width="414" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="g5c-jW-A6S" id="cmv-TQ-dZT">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="45"/>
@@ -214,7 +213,7 @@
                             <outlet property="delegate" destination="8rP-HS-1W9" id="Ueq-0P-Yph"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Title" id="1jr-8A-3gj">
+                    <navigationItem key="navigationItem" title="Add place" id="1jr-8A-3gj">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="ttK-50-r20">
                             <connections>
                                 <action selector="cancelAction:" destination="8rP-HS-1W9" id="1jF-tm-6c8"/>
@@ -222,16 +221,16 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="Frw-VL-zGQ">
                             <connections>
-                                <segue destination="dkT-9Z-KJ0" kind="unwind" identifier="saveSegue" unwindAction="unwindSegueWithSegue:" id="ePs-gM-Qjh"/>
+                                <segue destination="dkT-9Z-KJ0" kind="unwind" identifier="savePlace" unwindAction="unwindSegueWithSegue:" id="ePs-gM-Qjh"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="imageOfPlace" destination="nzO-O0-ygR" id="yYu-ti-e4D"/>
-                        <outlet property="locationTF" destination="G4a-pF-71C" id="enX-fM-v4l"/>
-                        <outlet property="nameTF" destination="d7e-V3-FSn" id="xXF-PE-6o7"/>
+                        <outlet property="placeImage" destination="nzO-O0-ygR" id="yYu-ti-e4D"/>
+                        <outlet property="placeLocation" destination="G4a-pF-71C" id="enX-fM-v4l"/>
+                        <outlet property="placeName" destination="d7e-V3-FSn" id="xXF-PE-6o7"/>
+                        <outlet property="placeType" destination="omD-be-oik" id="79p-XR-dwh"/>
                         <outlet property="saveButton" destination="Frw-VL-zGQ" id="ufF-zH-CAJ"/>
-                        <outlet property="typeTF" destination="omD-be-oik" id="79p-XR-dwh"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QIw-Q8-8m2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -269,6 +268,9 @@
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="23"/>
                         </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="30"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -281,7 +283,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Gk7-Jw-vt9"/>
+        <segue reference="ITY-QD-oyn"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Photo" width="195" height="196"/>
